Default <select multiple> expands up to 10 items instead of showing 4. https://bugs.webkit.org/show_bug.cgi?id=70765

Patch by Antaryami Pandia <antaryami.pandia@motorola.com> on 2011-11-08
Reviewed by Darin Adler.

Source/WebCore:

Tests: fast/forms/select-clientheight-large-size.html
       fast/forms/select-clientheight-with-multiple-attr.html

* rendering/RenderListBox.cpp:
(WebCore::RenderListBox::size):

LayoutTests:

* fast/forms/select-clientheight-large-size-expected.txt: Added.
* fast/forms/select-clientheight-large-size.html: Added.
* fast/forms/select-clientheight-with-multiple-attr-expected.txt: Added.
* fast/forms/select-clientheight-with-multiple-attr.html: Added.
* platform/chromium/test_expectations.txt:
* platform/gtk/fast/forms/listbox-clip-expected.txt:
* platform/mac/test_expectations.txt:
* platform/qt/test_expectations.txt:
* platform/win/test_expectations.txt:

Canonical link: https://commits.webkit.org/88220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99653 268f45cc-cd09-0410-ab3c-d52691b4dbfc